--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,12 @@ html, body{
     margin: 0;
     padding: 0;
 }
+
+.app {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
