--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,20 @@ html, body{
     padding: 0;
 }
 
+#app{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.app{
+    flex: 1;
+}
+
 body{
     background-color: lightcyan;
 }
 
+*{
+    box-sizing: border-box;
+}
