--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,3 +2,21 @@ html, body{
     margin: 0;
     padding: 0;
 }
+
+#app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+.app {
+    flex: 1;
+}
+
+body {
+    background-color: lightcyan;
+}
+
+* {
+    box-sizing: border-box;
+}
